added email link

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../static/main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/static/animate.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
 <body>
 
@@ -22,6 +22,8 @@
                 <div class='text-center col-8 col-md-4' id="card">
                     <img src="/static/headshot.png" id="headshot">
                     <h3>GRAYDEN SHAND</h3>
+                    <hr id="underline" style="width: 10em; color: #dddddd">
+                    <a href="mailto:graydenshand@gmail.com" style="color: #f35626"><span class="fas fa-envelope" style='font-size: 2em;'></span></a>
                     <hr id="underline" style="width: 10em; color: #dddddd">
                     <p class="lead"><i>let's build something new</i></p>
                 </div>
