GA contact click event setup

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
                     <img src="/static/headshot.png" id="headshot">
                     <h3>GRAYDEN SHAND</h3>
                     <hr id="underline" style="width: 10em; color: #dddddd">
-                    <a href="mailto:graydenshand@gmail.com" style="color: #f35626" onclick="contactClick()"><span class="fas fa-envelope" style='font-size: 2em;'></span></a>
+                    <a href="mailto:graydenshand@gmail.com" style="color: #f35626" id="contactClick"><span class="fas fa-envelope" style='font-size: 2em;'></span></a>
                     <hr id="underline" style="width: 10em; color: #dddddd">
                     <p class="lead"><i>let's build something new</i></p>
                 </div>
