--- a/templates/article.html
+++ b/templates/article.html
@@ -4,16 +4,25 @@
 <div class="row">
 	<div class="col-sm-2 col-0"></div>
 	<div class="col-sm-8" style="background-color: #ffffff; padding: 0;">
-		<img src="../static/article_head.png" width="100%" style='height: 20em; object-fit: cover; margin-bottom: 1.5em;'>
-		<div style="padding: 3em;">
-			<h1 class="text-center">{{ title }}</h1>
-			<h2 class="text-center">{{ sub_title }}</h2>
-			<p>Okay, first things first: Why the hell are you talking about command line applications? I want to build for the web. Well here’s the deal, Bub.</p>
+		<div class="row">
+			<div class="col-1"></div>
+			<div class="col-10">
+				<img src="../static/article_head.png" width="100%" style='height: auto; margin: 1em 0 1em 0;'>
+			</div>
+			<div class="col-1"></div>
+		</div>
+		<div class="row">
+			<div class="col-1"></div>
+			<div class="col-10">
+				<h1 class="text-center">{{ title }}</h1>
+				<h2 class="text-center">{{ sub_title }}</h2>
+				<p>Okay, first things first: Why the hell are you talking about command line applications? I want to build for the web. Well here’s the deal, Bub.</p>
 
-			<p><strong>You can’t write applications well until you understand what applications are.</strong></p>
-
-			<p>And the best way to do that is to start from the basics. So, if you want to learn how this stuff actually works, buckle up. It’s going to be a bumpy ride.</p>
-			<h3>So, what’s an application, anyway?</h3>
+				<p><b>You can’t write applications well until you understand what applications are.</b></p>
+				<p>And the best way to do that is to start from the basics. So, if you want to learn how this stuff actually works, buckle up. It’s going to be a bumpy ride.</p>
+				<h3>So, what’s an application, anyway?</h3>
+			</div>
+			<div class="col-1"></div>
 		</div>
 	</div>
 	<div class="col-sm-2 col-0"></div>
