--- a/static/base.css
+++ b/static/base.css
@@ -21,13 +21,12 @@ html {
 
 h1 {
 	font-size: 2em;
-	margin-bottom: .3em;
+	margin-bottom: 0.01;
 }
 
 h2 {
 	font-size: 1.7em;
 	color: #B27203;
-	margin-bottom: .25em;
 }
 
 h3 {
@@ -37,4 +36,8 @@ h3 {
 
 p {
 	font-size: 1.2em;
+}
+
+b {
+	color: #5D5D5D;
 }
