--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <nav class="navbar navbar-dark navbar-expand-lg" style="background-color: #0B5BB2;">
-	<a class="navbar-brand" href="#">Grayden Shand</a>
+	<a class="navbar-brand" href="{{ url_for('index') }}">Grayden Shand</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	<span class="navbar-toggler-icon"></span>
 	</button>
@@ -22,9 +22,6 @@
 		<ul class="navbar-nav">
 		  <li class="nav-item">
 		    <a class="nav-link" href="#">Lessons</a>
-		  </li>
-		  <li class="nav-item">
-		    <a class="nav-link" href="#">Contact</a>
 		  </li>
 		</ul>
 	</div>
