--- a/templates/article.html
+++ b/templates/article.html
@@ -16,11 +16,31 @@
 			<div class="col-10">
 				<h1 class="text-center">{{ title }}</h1>
 				<h2 class="text-center">{{ sub_title }}</h2>
-				<p>Okay, first things first: Why the hell are you talking about command line applications? I want to build for the web. Well here’s the deal, Bub.</p>
+				<hr>
+				<h3>Summary</h3>
 
-				<p><b>You can’t write applications well until you understand what applications are.</b></p>
-				<p>And the best way to do that is to start from the basics. So, if you want to learn how this stuff actually works, buckle up. It’s going to be a bumpy ride.</p>
-				<h3>So, what’s an application, anyway?</h3>
+				<p>The end result of broadly defined jobs is that they usually result in a mismatch between what the employer needs and what the employee can offer. You need to be specific about the contributions that the candidate will make in order to find someone who is actually capable of making those contributions.</p>
+
+				<p>When you’re specific about what you want, your goals become much easier to predict and measure.</p>
+				<hr>
+				<h3>Tell me if this sounds familiar</h3>
+				<p><i>The applicant should
+					<ul>
+						<li>have 8-10 years of previous experience leading development teams</li>
+						<li>be a full-stack web developer with the ability to develop native applications</li>
+						<li>be fluent in Java, Python, C++, Ruby, SQL, Javascript, and Node.js</li>
+						<li>have previous experience implementing online machine learning algorithms at massive scale</li>
+						<li>Strong understanding of both computer science and mathematics</li>
+						<li>Mastery of database architecture and design</li>
+						<li>Proficiency in graphic design and Adobe Illustrator, and be able to hire and train new employees.</li>
+					</ul></i></p>
+				<p>The world as we know it was fundamentally changed (and still is changing) by the information revolution. Today, even small businesses are hitting a wall when it comes to their information systems. Simply keeping it all organized is a full-time job.</p>
+
+				<p>Managers, faced with this dilemma, decide that they need to hire a “tech person”. This person is going to be tasked with doing everything that the current employees of the company feel is too “technical” for them to learn. This involves everything from setting up your coworker’s Google Calendar, to planning your company’s AI and VR strategies.</p>
+
+				<p>For someone who works in a technical field, joining an organization like this can be daunting. You are expected to know and execute way more than should be reasonably expected of a single person. If you are one of those unicorn employees that actually can proficiently deliver on myriad types of projects, then congratulations, this is a great time for your career. However, everyone else is left without much to offer. </p>
+
+				<p>It’s time for managers to wake up and realize that “technical work” is an overly used term that covers way too broad of a skillset. It’s your job as a manager to learn enough about a foreign subject to be informed and narrow your needs down to a set of skills that can realistically be mastered by a single person. Why do YOU need a machine learning engineer right now? Can you really expect this same person to handle graphic design? Do you really need this skill or are you just afraid of falling behind?</p>
 			</div>
 			<div class="col-1"></div>
 		</div>
