--- a/templates/article.html
+++ b/templates/article.html
@@ -15,13 +15,13 @@
 			<div class="col-1"></div>
 			<div class="col-10">
 				<h1 class="text-center">{{ title }}</h1>
-				<h2 class="text-center">{{ sub_title }}</h2>
+				<h2 class="text-center">{{ date }}</h2>
 				<hr>
 				<h3>Summary</h3>
 
 				<p>The end result of broadly defined jobs is that they usually result in a mismatch between what the employer needs and what the employee can offer. You need to be specific about the contributions that the candidate will make in order to find someone who is actually capable of making those contributions.</p>
 
-				<p>When you’re specific about what you want, your goals become much easier to predict and measure.</p>
+				<p>When you’re specific about what you want, performance becomes much easier to predict and measure.</p>
 				<hr>
 				<h3>Tell me if this sounds familiar</h3>
 				<p><i>The applicant should
