--- a/templates/article.html
+++ b/templates/article.html
@@ -24,16 +24,16 @@
 				<p>When you’re specific about what you want, performance becomes much easier to predict and measure.</p>
 				<hr>
 				<h3>Tell me if this sounds familiar</h3>
-				<p><i>The applicant should
-					<ul>
-						<li>have 8-10 years of previous experience leading development teams</li>
-						<li>be a full-stack web developer with the ability to develop native applications</li>
-						<li>be fluent in Java, Python, C++, Ruby, SQL, Javascript, and Node.js</li>
-						<li>have previous experience implementing online machine learning algorithms at massive scale</li>
-						<li>Strong understanding of both computer science and mathematics</li>
-						<li>Mastery of database architecture and design</li>
-						<li>Proficiency in graphic design and Adobe Illustrator, and be able to hire and train new employees.</li>
-					</ul></i></p>
+				<i>The applicant should<br>
+				<ul>
+					<li>have 8-10 years of previous experience leading development teams</li>
+					<li>be a full-stack web developer with the ability to develop native applications</li>
+					<li>be fluent in Java, Python, C++, Ruby, SQL, Javascript, and Node.js</li>
+					<li>have previous experience implementing online machine learning algorithms at massive scale</li>
+					<li>Strong understanding of both computer science and mathematics</li>
+					<li>Mastery of database architecture and design</li>
+					<li>Proficiency in graphic design and Adobe Illustrator, and be able to hire and train new employees.</li></i>
+				</ul>
 				<p>The world as we know it was fundamentally changed (and still is changing) by the information revolution. Today, even small businesses are hitting a wall when it comes to their information systems. Simply keeping it all organized is a full-time job.</p>
 
 				<p>Managers, faced with this dilemma, decide that they need to hire a “tech person”. This person is going to be tasked with doing everything that the current employees of the company feel is too “technical” for them to learn. This involves everything from setting up your coworker’s Google Calendar, to planning your company’s AI and VR strategies.</p>
